# mechafil-server

./: .env.example  .gitignore  .readthedocs.yaml  README.md  pyproject.toml
data/: historical_data.pkl  historical_data_meta.json  latest_simulation.json
docs/: README.md
docs/source/: conf.py  configuration.rst  deployment.rst  index.rst
docs/source/_templates/: 404.html
docs/source/api/: endpoints.rst  models.rst
docs/source/examples/: advanced.rst  quickstart.rst
examples/: make_payload.py
mechafil_server/: __init__.py  build_docs.py  config.py  data.py  main.py  models.py  results.py  scheduler.py  simulation.py
test-scripts/default_simulation/: test-results.py  test.sh
test-scripts/forecast_len/: test.sh
test-scripts/historical_data/: spacescope_results.json  test-historical-data.py  test.sh
test-scripts/lock_target/: offline_simulation.json  test-results.py  test.sh
test-scripts/sector_duration/: offline_simulation.json  test.sh
tests/: README.md  conftest.py  test-data-fetching.py  test-simulation.py
tests/integration/: test_api_validation.py  test_endpoints.py
tests/utils/: simulation_helpers.py
